[tool.poetry]
name = "fibonacci-2048"
version = "0.1.0"
description = "A game 2048 with Fibonacci numbers instead of powers of 2. Written in Python."
authors = ["nshib <nshib54321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
